fix: list state

--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -45,7 +45,8 @@
                     [direction]='-1' [tabFilterProperty]="'Rule Category'"
                     [columnWhiteList]="['Policy Title', 'Compliance %', 'Policy Severity', 'Rule Category','Last Scanned']"
                     [paginatorAbsent]='true' [popRows]='popRows' (rowClickText)='handlePopClick($event)'
-                    [searchPassed]='searchPassed'>
+                    [searchPassed]='searchPassed' (headerColNameSelected)="handleHeaderColNameSelection($event)" 
+                    [headerColName]="headerColName" [direction]="direction">
                 </app-data-table>
             </mat-grid-tile>
         </mat-grid-list>
