--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -39,7 +39,7 @@
             [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
             (removeAllCheckedEventEmitter)="handleRemoveAllChecked($event)" (selectedFilterType)='changeFilterType($event)'
             (selectedFilter)="changeFilterTags($event)" (deleteAllFilters)="deleteFilters($event)"
-            (deleteFilter)="deleteFilters($event)" [filteredArray]="filters" [doNotDisplaySearch]="doNotDisplaySearch" [filterErrorMessage]="filterErrorMessage">
+            (deleteFilter)="deleteFilters($event)" [filteredArray]="filters" [doNotDisplaySearch]="doNotDisplaySearch" [filterErrorMessage]="filterErrorMessage" (headerColNameSelected)="handleHeaderColNameSelection($event)" [headerColName]="headerColName" [direction]="direction">
         </app-data-table>
         <app-issue-exception *ngIf="adminAccess && showExceptionalModal" [issueList]="cbArr"
             [exceptionAction]="exceptionAction" (closeExceptionalModal)="closeExceptionalModal($event)"
