--- a/webapp/src/app/pacman-features/secondary-components/all-policy-violations/all-policy-violations.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/all-policy-violations/all-policy-violations.component.html
@@ -33,6 +33,8 @@
                         (searchTriggerred)='callNewSearch()'
                         [searchableHeader]='true'
                         [dataHead]="'List of violations'"
-                        (rowClickText)='handlePopClick($event)'></app-data-table>
+                        (rowClickText)='handlePopClick($event)'
+                        (headerColNameSelected)="handleHeaderColNameSelection($event)" 
+                        [headerColName]="headerColName" [direction]="direction"></app-data-table>
     </div>
 </div>
