--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
@@ -28,6 +28,8 @@
 .policy-knowledgebase-content{
   height: calc(100vh - 250px);
   background-color: var(--background-white);
+  border-radius: var(--border-radius);
+  border: 1px solid var(--border-100);
 }
 
 .pk-header {
